# MegaMan64Recompiled

./: BUILDING.md  CMakeLists.txt  CMakeSettings.json  MegaMan64.rev1.toml  README.md  ROADMAP.md  asp.toml  controls.json  general.json  graphics.json  patches.toml  sound.json  us.rev1.toml
.github/workflows/: validate-external.yml  validate-internal.yml  validate.yml
include/: launcher_bootstrap.hpp  mm64_input_hotplug.hpp  mm64_paths.hpp  ovl_patches.hpp  yaz0.h  zelda_config.h  zelda_render.h  zelda_support.h
patches/: Makefile  build_patches.bat  build_patches.ps1  patches.h  print.c  sound.h  syms.ld
src/game/: config.cpp  controller_hotplug.cpp  controls.cpp  input.cpp  quicksaving.cpp  recomp_api.cpp  rom_decompression.cpp
src/main/: main.cpp  register_patches.cpp  rt64_render_context.cpp
src/ui/: ui_config.cpp  ui_launcher.cpp  ui_launcher_bootstrap.cpp  ui_renderer.cpp
tests/: CMakeLists.txt  test_config.cpp  test_controller_hotplug.cpp  test_controls.cpp  test_launcher_bootstrap.cpp  test_mm64_paths.cpp  test_yaz0.cpp
