cmake_minimum_required(VERSION 3.20)

# Some vendored dependencies still declare very old `cmake_minimum_required`
# values. CMake 4 removes compatibility below 3.5 unless this floor is raised.
if (CMAKE_VERSION VERSION_GREATER_EQUAL "4.0")
    set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
endif()

# Keep legacy ASM detection behavior in vendored projects that still route
# assembly through the MSVC toolchain on Windows.
if (POLICY CMP0194)
    cmake_policy(SET CMP0194 OLD)
endif()

if (APPLE)
    set(CMAKE_OSX_DEPLOYMENT_TARGET "11.0" CACHE STRING "Minimum OS X deployment version")
endif()

if (WIN32)
    file(GLOB MM64_WINSDK_BIN_DIRS LIST_DIRECTORIES TRUE "C:/Program Files (x86)/Windows Kits/10/bin/*")
    list(SORT MM64_WINSDK_BIN_DIRS COMPARE NATURAL ORDER DESCENDING)
    foreach(MM64_WINSDK_BIN_DIR IN LISTS MM64_WINSDK_BIN_DIRS)
        if(NOT DEFINED CMAKE_RC_COMPILER AND EXISTS "${MM64_WINSDK_BIN_DIR}/x64/rc.exe")
            set(CMAKE_RC_COMPILER "${MM64_WINSDK_BIN_DIR}/x64/rc.exe" CACHE FILEPATH "Windows resource compiler")
        endif()
        if(NOT DEFINED CMAKE_MT AND EXISTS "${MM64_WINSDK_BIN_DIR}/x64/mt.exe")
            set(CMAKE_MT "${MM64_WINSDK_BIN_DIR}/x64/mt.exe" CACHE FILEPATH "Windows manifest tool")
        endif()
        if(DEFINED CMAKE_RC_COMPILER AND DEFINED CMAKE_MT)
            break()
        endif()
    endforeach()
endif()

project(MegaMan64Recompiled LANGUAGES C CXX)
set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# set(CMAKE_CXX_VISIBILITY_PRESET hidden)

set(MM64_MSVC_LIKE OFF)
if (MSVC
    OR (CMAKE_C_COMPILER_ID STREQUAL "Clang" AND CMAKE_C_SIMULATE_ID STREQUAL "MSVC")
    OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC"))
    set(MM64_MSVC_LIKE ON)
endif()

function(mm64_remove_target_compile_option target_name compile_option)
    if(NOT TARGET "${target_name}")
        return()
    endif()

    get_target_property(mm64_target_compile_options "${target_name}" COMPILE_OPTIONS)
    if(NOT mm64_target_compile_options)
        return()
    endif()

    list(REMOVE_ITEM mm64_target_compile_options "${compile_option}")
    set_property(TARGET "${target_name}" PROPERTY COMPILE_OPTIONS "${mm64_target_compile_options}")
endfunction()

if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-everything /W4")
endif()

# Opt out of constexpr mutex constructor on windows to prevent vcredist issues
if (WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR")
endif()

if (APPLE)
    enable_language(OBJC OBJCXX)
endif()

# Avoid warning about DOWNLOAD_EXTRACT_TIMESTAMP in CMake 3.24:
if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
    cmake_policy(SET CMP0135 NEW)
endif()

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

if (WIN32)
    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/lib/")
endif()

set(RT64_STATIC TRUE)
set(RT64_SDL_WINDOW_VULKAN TRUE)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/rt64 ${CMAKE_BINARY_DIR}/rt64)

# set(BUILD_SHARED_LIBS_SAVED "${BUILD_SHARED_LIBS}")
set(BUILD_SHARED_LIBS OFF)
SET(LUNASVG_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/lunasvg)
# set(BUILD_SHARED_LIBS "${BUILD_SHARED_LIBS_SAVED}")
SET(ENABLE_SVG_PLUGIN ON CACHE BOOL "" FORCE)
SET(RMLUI_TESTS_ENABLED OFF CACHE BOOL "" FORCE)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/RmlUi)

add_subdirectory(${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime)

if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    # N64ModernRuntime currently adds a GCC/Clang-only warning suppression that
    # plain MSVC rejects. Keep the submodule pristine and normalize it here.
    mm64_remove_target_compile_option(ultramodern "-Wno-unused-parameter")
    mm64_remove_target_compile_option(librecomp "-Wno-unused-parameter")
endif()

option(MM64_ENABLE_PATCH_OVERLAYS "Build optional recompiled patch overlays" OFF)

if(MM64_ENABLE_PATCH_OVERLAYS)
    if(WIN32)
        if(EXISTS "${CMAKE_SOURCE_DIR}/build-tools/N64Recomp.exe")
            set(N64RECOMP_EXE "${CMAKE_SOURCE_DIR}/build-tools/N64Recomp.exe")
        else()
            set(N64RECOMP_EXE "${CMAKE_SOURCE_DIR}/N64Recomp.exe")
        endif()
    else()
        if(EXISTS "${CMAKE_SOURCE_DIR}/build-tools/N64Recomp")
            set(N64RECOMP_EXE "${CMAKE_SOURCE_DIR}/build-tools/N64Recomp")
        else()
            set(N64RECOMP_EXE "${CMAKE_SOURCE_DIR}/N64Recomp")
        endif()
    endif()
endif()

target_include_directories(rt64 PRIVATE ${CMAKE_BINARY_DIR}/rt64/src)

# Generated by N64Recomp / RSPRecomp (see BUILDING.md). Fail early with a clear message
# instead of obscure "No SOURCES" / missing aspMain.cpp errors.
set(MM64_RSP_ASPMAIN "${CMAKE_SOURCE_DIR}/rsp/aspMain.cpp")
file(GLOB FUNC_C_SOURCES ${CMAKE_SOURCE_DIR}/RecompiledFuncs/*.c)
file(GLOB FUNC_CXX_SOURCES ${CMAKE_SOURCE_DIR}/RecompiledFuncs/*.cpp)
if(NOT EXISTS "${MM64_RSP_ASPMAIN}" OR (NOT FUNC_C_SOURCES AND NOT FUNC_CXX_SOURCES))
    set(MM64_MISSING "")
    if(NOT EXISTS "${MM64_RSP_ASPMAIN}")
        string(APPEND MM64_MISSING "  - rsp/aspMain.cpp (from ./RSPRecomp asp.toml; ROM must be megaman64.us.z64 in the repo root)\n")
    endif()
    if(NOT FUNC_C_SOURCES AND NOT FUNC_CXX_SOURCES)
        string(APPEND MM64_MISSING "  - RecompiledFuncs/*.c or RecompiledFuncs/*.cpp (from ./N64Recomp us.rev1.toml)\n")
    endif()
    message(FATAL_ERROR
        "Recompiler output is missing:\n${MM64_MISSING}"
        "Use git submodule update --init --recursive, place the ROM as megaman64.us.z64, build N64Recomp and RSPRecomp, "
        "then run the commands above from the repo root. See BUILDING.md."
    )
endif()

# RecompiledFuncs - Library containing the primary recompiler output
add_library(RecompiledFuncs STATIC)

set(MM64_RECOMPILED_FUNC_COMPILE_OPTIONS "")
if(MM64_MSVC_LIKE)
    list(APPEND MM64_RECOMPILED_FUNC_COMPILE_OPTIONS
        /bigobj
        /wd4101
    )
else()
    list(APPEND MM64_RECOMPILED_FUNC_COMPILE_OPTIONS
        -fno-strict-aliasing
        -Wno-unused-variable
        -Wno-implicit-function-declaration
    )
endif()

target_compile_options(RecompiledFuncs PRIVATE
    # -Wno-unused-but-set-variable
    ${MM64_RECOMPILED_FUNC_COMPILE_OPTIONS}
)

target_include_directories(RecompiledFuncs PRIVATE
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/ultramodern/include
    ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/librecomp/include
    ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/N64Recomp/include
)

target_sources(RecompiledFuncs PRIVATE ${FUNC_C_SOURCES} ${FUNC_CXX_SOURCES})

if(MM64_ENABLE_PATCH_OVERLAYS)
    # PatchesLib - Library containing the recompiled output for any custom function patches
    add_library(PatchesLib STATIC)

    target_compile_options(PatchesLib PRIVATE
        # -Wno-unused-but-set-variable
        ${MM64_RECOMPILED_FUNC_COMPILE_OPTIONS}
    )

    target_include_directories(PatchesLib PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/ultramodern/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/librecomp/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/N64Recomp/include
    )

    target_sources(PatchesLib PRIVATE
        ${CMAKE_SOURCE_DIR}/RecompiledPatches/patches.c
        ${CMAKE_SOURCE_DIR}/RecompiledPatches/patches_bin.c
    )

    if(NOT MM64_MSVC_LIKE)
        set_source_files_properties(${CMAKE_SOURCE_DIR}/RecompiledPatches/patches.c PROPERTIES COMPILE_FLAGS -fno-strict-aliasing)
    endif()

    # Build patches elf
    if(NOT DEFINED PATCHES_C_COMPILER)
        set(PATCHES_C_COMPILER clang)
    endif()

    if(NOT DEFINED PATCHES_LD)
        set(PATCHES_LD ld.lld)
    endif()

    if(NOT DEFINED PATCHES_OBJCOPY)
        set(PATCHES_OBJCOPY llvm-objcopy)
    endif()

    # Build patches.elf using native Windows build script (no bash/make dependency)
    if(WIN32)
        add_custom_target(PatchesBin
            COMMAND ${CMAKE_COMMAND} -E env
                MM64_PATCHES_CC=${PATCHES_C_COMPILER}
                MM64_PATCHES_LD=${PATCHES_LD}
                powershell -ExecutionPolicy Bypass -File ${CMAKE_SOURCE_DIR}/patches/build_patches.ps1
            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/patches
            BYPRODUCTS ${CMAKE_SOURCE_DIR}/patches/patches.elf
        )
    else()
        add_custom_target(PatchesBin
            COMMAND ${CMAKE_COMMAND} -E env CC=${PATCHES_C_COMPILER} LD=${PATCHES_LD} bash -lc "make -f Makefile"
            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/patches
            BYPRODUCTS ${CMAKE_SOURCE_DIR}/patches/patches.elf
        )
    endif()

    # Generate patches_bin.c from patches.bin
    add_custom_command(OUTPUT ${CMAKE_SOURCE_DIR}/RecompiledPatches/patches_bin.c
        COMMAND file_to_c ${CMAKE_SOURCE_DIR}/patches/patches.bin mm_patches_bin ${CMAKE_SOURCE_DIR}/RecompiledPatches/patches_bin.c ${CMAKE_SOURCE_DIR}/RecompiledPatches/patches_bin.h
        DEPENDS ${CMAKE_SOURCE_DIR}/patches/patches.bin
    )

    # Recompile patches elf into patches.c and patches.bin
    add_custom_command(OUTPUT
                           ${CMAKE_SOURCE_DIR}/patches/patches.bin
                           ${CMAKE_SOURCE_DIR}/RecompiledPatches/patches.c
                           ${CMAKE_SOURCE_DIR}/RecompiledPatches/recomp_overlays.inl
                           ${CMAKE_SOURCE_DIR}/RecompiledPatches/funcs.h
                       COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_SOURCE_DIR}/RecompiledPatches
                       COMMAND ${N64RECOMP_EXE} ${CMAKE_SOURCE_DIR}/patches.toml
                       WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
                       DEPENDS ${CMAKE_SOURCE_DIR}/patches/patches.elf
    )
else()
    add_library(PatchesLib INTERFACE)
endif()


# Download controller db file for controller support via SDL2
set(GAMECONTROLLERDB_COMMIT "b1e4090b3d4266e55feb0793efa35792e05faf66")
set(GAMECONTROLLERDB_URL "https://raw.githubusercontent.com/gabomdq/SDL_GameControllerDB/${GAMECONTROLLERDB_COMMIT}/gamecontrollerdb.txt")
set(MM64_GAMECONTROLLERDB_PATH "${CMAKE_SOURCE_DIR}/gamecontrollerdb.txt")

if(NOT EXISTS "${MM64_GAMECONTROLLERDB_PATH}")
    file(DOWNLOAD ${GAMECONTROLLERDB_URL} "${MM64_GAMECONTROLLERDB_PATH}"
         STATUS MM64_GAMECONTROLLERDB_DOWNLOAD_STATUS
         TLS_VERIFY ON)
    list(GET MM64_GAMECONTROLLERDB_DOWNLOAD_STATUS 0 MM64_GAMECONTROLLERDB_DOWNLOAD_CODE)
    list(GET MM64_GAMECONTROLLERDB_DOWNLOAD_STATUS 1 MM64_GAMECONTROLLERDB_DOWNLOAD_MESSAGE)
    if(NOT MM64_GAMECONTROLLERDB_DOWNLOAD_CODE EQUAL 0)
        file(REMOVE "${MM64_GAMECONTROLLERDB_PATH}")
        message(FATAL_ERROR
            "Failed to download gamecontrollerdb.txt from ${GAMECONTROLLERDB_URL}: "
            "${MM64_GAMECONTROLLERDB_DOWNLOAD_MESSAGE}"
        )
    endif()
endif()

add_custom_target(DownloadGameControllerDB
    DEPENDS "${MM64_GAMECONTROLLERDB_PATH}")

# Main executable
add_executable(MegaMan64Recompiled)
add_dependencies(MegaMan64Recompiled DownloadGameControllerDB)

set (SOURCES
    ${CMAKE_SOURCE_DIR}/src/main/main.cpp
    ${CMAKE_SOURCE_DIR}/src/main/support.cpp
    ${CMAKE_SOURCE_DIR}/src/main/register_overlays.cpp
    ${CMAKE_SOURCE_DIR}/src/main/register_patches.cpp
    ${CMAKE_SOURCE_DIR}/src/main/rt64_render_context.cpp

    ${CMAKE_SOURCE_DIR}/src/game/input.cpp
    ${CMAKE_SOURCE_DIR}/src/game/controller_hotplug.cpp
    ${CMAKE_SOURCE_DIR}/src/game/controls.cpp
    ${CMAKE_SOURCE_DIR}/src/game/config.cpp
    ${CMAKE_SOURCE_DIR}/src/game/scene_table.cpp
    ${CMAKE_SOURCE_DIR}/src/game/debug.cpp
    ${CMAKE_SOURCE_DIR}/src/game/quicksaving.cpp
    ${CMAKE_SOURCE_DIR}/src/game/recomp_api.cpp
    ${CMAKE_SOURCE_DIR}/src/game/rom_decompression.cpp
    ${CMAKE_SOURCE_DIR}/src/game/yaz0.cpp

    ${CMAKE_SOURCE_DIR}/src/ui/ui_renderer.cpp
    ${CMAKE_SOURCE_DIR}/src/ui/ui_launcher.cpp
    ${CMAKE_SOURCE_DIR}/src/ui/ui_launcher_bootstrap.cpp
    ${CMAKE_SOURCE_DIR}/src/ui/ui_config.cpp
    ${CMAKE_SOURCE_DIR}/src/ui/ui_color_hack.cpp
    ${CMAKE_SOURCE_DIR}/src/ui/ui_rml_hacks.cpp

    ${CMAKE_SOURCE_DIR}/rsp/aspMain.cpp

    ${CMAKE_SOURCE_DIR}/lib/RmlUi/Backends/RmlUi_Platform_SDL.cpp
)

if (APPLE)
    list(APPEND SOURCES ${CMAKE_SOURCE_DIR}/src/main/support_apple.mm)
endif()

if (MM64_MSVC_LIKE)
    set_source_files_properties(
        ${CMAKE_SOURCE_DIR}/rsp/aspMain.cpp
        PROPERTIES COMPILE_OPTIONS "/wd4305"
    )
endif()

target_include_directories(MegaMan64Recompiled PRIVATE
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/N64Recomp/include
    ${CMAKE_SOURCE_DIR}/lib/concurrentqueue
    ${CMAKE_SOURCE_DIR}/lib/GamepadMotionHelpers
    ${CMAKE_SOURCE_DIR}/lib/RmlUi/Include
    ${CMAKE_SOURCE_DIR}/lib/RmlUi/Backends
    ${CMAKE_SOURCE_DIR}/lib/rt64/src/contrib
    ${CMAKE_SOURCE_DIR}/lib/rt64/src/contrib/hlslpp/include
    ${CMAKE_SOURCE_DIR}/lib/rt64/src/contrib/dxc/inc
    ${CMAKE_SOURCE_DIR}/lib/rt64/src
    ${CMAKE_SOURCE_DIR}/lib/rt64/src/rhi
    ${CMAKE_SOURCE_DIR}/lib/rt64/src/render
    ${CMAKE_SOURCE_DIR}/lib/freetype-windows-binaries/include
    ${CMAKE_SOURCE_DIR}/lib/rt64/src/contrib/nativefiledialog-extended/src/include
    ${CMAKE_BINARY_DIR}/shaders
    ${CMAKE_CURRENT_BINARY_DIR}
)

if(MM64_MSVC_LIKE)
    target_compile_options(MegaMan64Recompiled PRIVATE /bigobj /utf-8)
elseif(CMAKE_SIZEOF_VOID_P EQUAL 8 AND CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|amd64|AMD64")
    target_compile_options(MegaMan64Recompiled PRIVATE
        -march=nehalem
        -fno-strict-aliasing
        -fms-extensions
    )
else()
    target_compile_options(MegaMan64Recompiled PRIVATE
        -fno-strict-aliasing
        -fms-extensions
    )
endif()

if (MM64_MSVC_LIKE)
    # Disable identical code folding, since this breaks mod function patching as multiple functions can get merged into one.
    target_link_options(MegaMan64Recompiled PRIVATE /OPT:NOICF)
elseif (APPLE)
    # Use a wrapper around ld64 that respects segprot's `max_prot` value in order
    # to make our executable memory writable (required for mod function patching)
    target_link_options(MegaMan64Recompiled PRIVATE
        "-fuse-ld=${CMAKE_SOURCE_DIR}/.github/macos/ld64"
    )
endif()

if (WIN32)
    set(MM64_WINDOWS_SDL2_ROOT "" CACHE PATH "Path to an extracted SDL2 development package root on Windows")
    option(MM64_WINDOWS_FETCH_SDL2 "Automatically download SDL2 on Windows when no local root is configured" ON)

    set(MM64_SDL2_ROOT "")
    foreach(MM64_SDL2_CANDIDATE IN ITEMS
        "${MM64_WINDOWS_SDL2_ROOT}"
        "$ENV{SDL2_DIR}"
        "$ENV{SDL2_ROOT}"
    )
        if(MM64_SDL2_CANDIDATE AND EXISTS "${MM64_SDL2_CANDIDATE}/include/SDL.h")
            set(MM64_SDL2_ROOT "${MM64_SDL2_CANDIDATE}")
            break()
        endif()
    endforeach()

    if(NOT MM64_SDL2_ROOT)
        if(NOT MM64_WINDOWS_FETCH_SDL2)
            message(FATAL_ERROR
                "SDL2 was not found. Set MM64_WINDOWS_SDL2_ROOT (or SDL2_DIR / SDL2_ROOT) "
                "to an extracted SDL2 development package, or leave MM64_WINDOWS_FETCH_SDL2 enabled."
            )
        endif()

        include(FetchContent)

        if (DEFINED ENV{SDL2_VERSION})
            set(SDL2_VERSION $ENV{SDL2_VERSION})
        else()
            set(SDL2_VERSION "2.30.3")
        endif()

        # Fetch SDL2 on windows when no local SDK is configured.
        FetchContent_Declare(
            sdl2
            URL https://github.com/libsdl-org/SDL/releases/download/release-${SDL2_VERSION}/SDL2-devel-${SDL2_VERSION}-VC.zip
        )
        FetchContent_MakeAvailable(sdl2)
        set(MM64_SDL2_ROOT "${sdl2_SOURCE_DIR}")
    endif()

    set(MM64_SDL2_INCLUDE_DIR "${MM64_SDL2_ROOT}/include")
    set(MM64_SDL2_LIB_DIR "${MM64_SDL2_ROOT}/lib/x64")
    set(MM64_SDL2_DLL "${MM64_SDL2_LIB_DIR}/SDL2.dll")
    find_library(MM64_SDL2_LIBRARY
        NAMES SDL2
        PATHS "${MM64_SDL2_LIB_DIR}"
        NO_DEFAULT_PATH
    )

    if(NOT EXISTS "${MM64_SDL2_INCLUDE_DIR}/SDL.h")
        message(FATAL_ERROR "SDL2 headers were not found under ${MM64_SDL2_INCLUDE_DIR}.")
    endif()
    if(NOT MM64_SDL2_LIBRARY)
        message(FATAL_ERROR "SDL2 library was not found under ${MM64_SDL2_LIB_DIR}.")
    endif()
    if(NOT EXISTS "${MM64_SDL2_DLL}")
        message(FATAL_ERROR "SDL2.dll was not found under ${MM64_SDL2_LIB_DIR}.")
    endif()

    target_include_directories(MegaMan64Recompiled PRIVATE
        "${MM64_SDL2_INCLUDE_DIR}"
    )
    target_link_directories(MegaMan64Recompiled PRIVATE
        "${MM64_SDL2_LIB_DIR}"
    )
    target_link_libraries(MegaMan64Recompiled PRIVATE "${MM64_SDL2_LIBRARY}")

    # Copy SDL2 and dxc DLLs to output folder as post build step
    add_custom_command(TARGET MegaMan64Recompiled POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${MM64_SDL2_DLL}"
            "${CMAKE_SOURCE_DIR}/lib/rt64/src/contrib/dxc/bin/x64/dxil.dll"
            "${CMAKE_SOURCE_DIR}/lib/rt64/src/contrib/dxc/bin/x64/dxcompiler.dll"
            $<TARGET_FILE_DIR:MegaMan64Recompiled>)

    set_target_properties(
        MegaMan64Recompiled
        PROPERTIES
            LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE"
            LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"
            LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"
            LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"
    )

    if (NOT (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC"))
        target_sources(MegaMan64Recompiled PRIVATE ${CMAKE_SOURCE_DIR}/icons/app.rc)
    endif()
endif()

if (APPLE)
    find_package(SDL2 REQUIRED)
    target_include_directories(MegaMan64Recompiled PRIVATE ${SDL2_INCLUDE_DIRS})

    set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
    set(THREADS_PREFER_PTHREAD_FLAG TRUE)
    find_package(Threads REQUIRED)

    target_link_libraries(MegaMan64Recompiled PRIVATE ${CMAKE_DL_LIBS} Threads::Threads SDL2::SDL2)

    include(${CMAKE_SOURCE_DIR}/.github/macos/apple_bundle.cmake)
endif()

if (CMAKE_SYSTEM_NAME MATCHES "Linux")
    find_package(SDL2 REQUIRED)
    find_package(X11 REQUIRED)

    add_compile_definitions("RT64_SDL_WINDOW_VULKAN")

    # Generate icon_bytes.c from the app icon PNG.
    add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/icon_bytes.c ${CMAKE_CURRENT_BINARY_DIR}/icon_bytes.h
        COMMAND file_to_c ${CMAKE_SOURCE_DIR}/icons/512.png icon_bytes ${CMAKE_CURRENT_BINARY_DIR}/icon_bytes.c ${CMAKE_CURRENT_BINARY_DIR}/icon_bytes.h
        DEPENDS ${CMAKE_SOURCE_DIR}/icons/512.png
    )
    target_sources(MegaMan64Recompiled PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/icon_bytes.c)

    message(STATUS "SDL2_FOUND = ${SDL2_FOUND}")
    message(STATUS "SDL2_INCLUDE_DIRS = ${SDL2_INCLUDE_DIRS}")

    target_include_directories(MegaMan64Recompiled PRIVATE ${SDL2_INCLUDE_DIRS})

    message(STATUS "X11_FOUND = ${X11_FOUND}")
    message(STATUS "X11_Xrandr_FOUND = ${X11_Xrandr_FOUND}")
    message(STATUS "X11_INCLUDE_DIR = ${X11_INCLUDE_DIR}")
    message(STATUS "X11_LIBRARIES = ${X11_LIBRARIES}")

    target_include_directories(MegaMan64Recompiled PRIVATE ${X11_INCLUDE_DIR} ${X11_Xrandr_INCLUDE_PATH})
    target_link_libraries(MegaMan64Recompiled PRIVATE ${X11_LIBRARIES} ${X11_Xrandr_LIB})

    find_package(Freetype REQUIRED)

    message(STATUS "FREETYPE_FOUND = ${FREETYPE_FOUND}")
    message(STATUS "FREETYPE_INCLUDE_DIRS = ${FREETYPE_INCLUDE_DIRS}")
    message(STATUS "FREETYPE_LIBRARIES = ${FREETYPE_LIBRARIES}")

    include_directories(${FREETYPE_LIBRARIES})
    target_link_libraries(MegaMan64Recompiled PRIVATE ${FREETYPE_LIBRARIES} SDL2::SDL2)

    set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
    set(THREADS_PREFER_PTHREAD_FLAG TRUE)
    find_package(Threads REQUIRED)

    target_link_libraries(MegaMan64Recompiled PRIVATE "-latomic -static-libstdc++" ${CMAKE_DL_LIBS} Threads::Threads)
endif()

target_link_libraries(MegaMan64Recompiled PRIVATE
    PatchesLib
    RecompiledFuncs
    librecomp
    ultramodern
    rt64
    RmlCore
    RmlDebugger
    nfd
    lunasvg
)

# TODO fix the rt64 CMake script so that this doesn't need to be duplicated here
# For DXC
set (DXC_COMMON_OPTS "-I${PROJECT_SOURCE_DIR}/src")
set (DXC_DXIL_OPTS "-Wno-ignored-attributes")
set (DXC_SPV_OPTS "-spirv" "-fspv-target-env=vulkan1.0" "-fvk-use-dx-layout")
set (DXC_PS_OPTS "${DXC_COMMON_OPTS}" "-E" "PSMain" "-T ps_6_0" "-D DYNAMIC_RENDER_PARAMS")
set (DXC_VS_OPTS "${DXC_COMMON_OPTS}" "-E" "VSMain" "-T vs_6_0" "-D DYNAMIC_RENDER_PARAMS" "-fvk-invert-y")
set (DXC_CS_OPTS "${DXC_COMMON_OPTS}" "-E" "CSMain" "-T cs_6_0")
set (DXC_GS_OPTS "${DXC_COMMON_OPTS}" "-E" "GSMain" "-T gs_6_0")
set (DXC_RT_OPTS "${DXC_COMMON_OPTS}" "-D" "RT_SHADER" "-T" "lib_6_3" "-fspv-target-env=vulkan1.1spirv1.4" "-fspv-extension=SPV_KHR_ray_tracing" "-fspv-extension=SPV_EXT_descriptor_indexing")

if (${WIN32})
    set (DXC "${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/dxc/bin/x64/dxc.exe")
    add_compile_definitions(NOMINMAX)
else()
    if (APPLE)
        # Apple's binary is universal, so it'll work on both x86_64 and arm64
        set (DXC "DYLD_LIBRARY_PATH=${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/dxc/lib/arm64" "${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/dxc/bin/arm64/dxc-macos")
        if(CMAKE_SIZEOF_VOID_P EQUAL 8 AND CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|amd64|AMD64")
            set(SPIRVCROSS "DYLD_LIBRARY_PATH=${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/spirv-cross/lib/x64" "${PROJECT_SOURCE_DIR}/lib/rt64//src/contrib/spirv-cross/bin/x64/spirv-cross")
        else()
            set(SPIRVCROSS "DYLD_LIBRARY_PATH=${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/spirv-cross/lib/arm64" "${PROJECT_SOURCE_DIR}/lib/rt64//src/contrib/spirv-cross/bin/x64/spirv-cross")
        endif()
    else()
        if(CMAKE_SIZEOF_VOID_P EQUAL 8 AND CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|amd64|AMD64")
            set (DXC "LD_LIBRARY_PATH=${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/dxc/lib/x64" "${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/dxc/bin/x64/dxc-linux")
        else()
            set (DXC "LD_LIBRARY_PATH=${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/dxc/lib/arm64" "${PROJECT_SOURCE_DIR}/lib/rt64/src/contrib/dxc/bin/arm64/dxc-linux")
        endif()
    endif()
endif()

build_vertex_shader(MegaMan64Recompiled "shaders/InterfaceVS.hlsl" "shaders/InterfaceVS.hlsl")
build_pixel_shader(MegaMan64Recompiled "shaders/InterfacePS.hlsl" "shaders/InterfacePS.hlsl")

target_sources(MegaMan64Recompiled PRIVATE ${SOURCES})

set_property(TARGET MegaMan64Recompiled PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")

option(MM64_BUILD_TESTS "Build unit tests (yaz0, etc.)" ON)
if(MM64_BUILD_TESTS)
    enable_testing()
    add_executable(mm64_test_yaz0
        ${CMAKE_SOURCE_DIR}/tests/test_yaz0.cpp
        ${CMAKE_SOURCE_DIR}/src/game/yaz0.cpp
    )
    target_include_directories(mm64_test_yaz0 PRIVATE ${CMAKE_SOURCE_DIR}/include)
    target_compile_features(mm64_test_yaz0 PRIVATE cxx_std_20)
    add_test(NAME yaz0_decompress COMMAND mm64_test_yaz0)

    add_executable(mm64_test_paths
        ${CMAKE_SOURCE_DIR}/tests/test_mm64_paths.cpp
    )
    target_include_directories(mm64_test_paths PRIVATE ${CMAKE_SOURCE_DIR}/include)
    target_compile_features(mm64_test_paths PRIVATE cxx_std_20)
    add_test(NAME path_layout_smoke COMMAND mm64_test_paths)

    add_executable(mm64_test_launcher_bootstrap
        ${CMAKE_SOURCE_DIR}/tests/test_launcher_bootstrap.cpp
        ${CMAKE_SOURCE_DIR}/src/ui/ui_launcher_bootstrap.cpp
    )
    target_include_directories(mm64_test_launcher_bootstrap PRIVATE ${CMAKE_SOURCE_DIR}/include)
    target_compile_features(mm64_test_launcher_bootstrap PRIVATE cxx_std_20)
    add_test(NAME launcher_bootstrap_smoke COMMAND mm64_test_launcher_bootstrap)

    add_executable(mm64_test_controls
        ${CMAKE_SOURCE_DIR}/tests/test_controls.cpp
        ${CMAKE_SOURCE_DIR}/src/game/controls.cpp
    )
    target_include_directories(mm64_test_controls PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/lib/concurrentqueue
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/N64Recomp/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/librecomp/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/thirdparty
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/ultramodern/include
    )
    target_compile_features(mm64_test_controls PRIVATE cxx_std_20)
    add_test(NAME controls_mapping_smoke COMMAND mm64_test_controls)

    add_executable(mm64_test_config
        ${CMAKE_SOURCE_DIR}/tests/test_config.cpp
        ${CMAKE_SOURCE_DIR}/src/game/config.cpp
    )
    target_include_directories(mm64_test_config PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/lib/concurrentqueue
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/N64Recomp/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/librecomp/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/thirdparty
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/thirdparty/miniz
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/ultramodern/include
        ${CMAKE_SOURCE_DIR}/lib/rt64/src
        ${CMAKE_BINARY_DIR}/lib/N64ModernRuntime/librecomp/miniz
    )
    target_compile_features(mm64_test_config PRIVATE cxx_std_20)
    if(WIN32)
        target_link_libraries(mm64_test_config PRIVATE shell32 ole32)
    endif()
    add_test(NAME config_serialization_smoke COMMAND mm64_test_config)

    add_executable(mm64_test_rom_decompression
        ${CMAKE_SOURCE_DIR}/tests/test_rom_decompression.cpp
        ${CMAKE_SOURCE_DIR}/src/game/rom_decompression.cpp
        ${CMAKE_SOURCE_DIR}/src/game/yaz0.cpp
    )
    target_include_directories(mm64_test_rom_decompression PRIVATE ${CMAKE_SOURCE_DIR}/include)
    target_compile_features(mm64_test_rom_decompression PRIVATE cxx_std_20)
    add_test(NAME rom_decompression_smoke COMMAND mm64_test_rom_decompression)

    add_executable(mm64_test_save_system
        ${CMAKE_SOURCE_DIR}/tests/test_save_system.cpp
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/librecomp/src/flash.cpp
        ${CMAKE_SOURCE_DIR}/src/game/quicksaving.cpp
    )
    target_include_directories(mm64_test_save_system PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/N64Recomp/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/librecomp/include
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/thirdparty
        ${CMAKE_SOURCE_DIR}/lib/N64ModernRuntime/ultramodern/include
        ${CMAKE_SOURCE_DIR}/lib/concurrentqueue
    )
    target_compile_features(mm64_test_save_system PRIVATE cxx_std_20)
    add_test(NAME save_system_smoke COMMAND mm64_test_save_system)

    add_executable(mm64_test_controller_hotplug
        ${CMAKE_SOURCE_DIR}/tests/test_controller_hotplug.cpp
        ${CMAKE_SOURCE_DIR}/src/game/controller_hotplug.cpp
    )
    target_include_directories(mm64_test_controller_hotplug PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/lib/GamepadMotionHelpers
    )
    if(WIN32)
        target_include_directories(mm64_test_controller_hotplug PRIVATE "${MM64_SDL2_INCLUDE_DIR}")
    elseif(APPLE OR CMAKE_SYSTEM_NAME MATCHES "Linux")
        target_include_directories(mm64_test_controller_hotplug PRIVATE ${SDL2_INCLUDE_DIRS})
    endif()
    target_compile_features(mm64_test_controller_hotplug PRIVATE cxx_std_20)
    add_test(NAME controller_hotplug_smoke COMMAND mm64_test_controller_hotplug)
endif()
